support to multi-column secondary index + fixing index selection when only part of the attributes in the where clause form the indexed columns